# TurbaMovieBot

./: .clang-format  .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
include/: bot.hpp  commands.hpp  controller.hpp  db_handler.hpp  emojis.hpp  icommander.hpp  icontroller.hpp  turba_bot.hpp  turba_commands.hpp  utils.hpp
include/model/: extraction.hpp  group.hpp  movie.hpp  movie_status.hpp  turba_entry.hpp  user.hpp  user_group.hpp
src/: bot.cpp  controller.cpp  db_handler.cpp  main.cpp  turba_bot.cpp
